@@ -1,7 +1,11 @@
 
-// Some rational arithmetic tests, pilfered from Rob Hubbard's Q+Q manual.
-
 using math;
+
+// Random number generator.
+
+drop 97 [random; i=1..100] when () = srandom 0 end;
+
+// Some rational arithmetic tests, pilfered from Rob Hubbard's Q+Q manual.
 
 // Basic arithmetic and pow function.
 
